// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<View
  accessibilityTraits="header"
  style={
    Array [
      Object {
        "backgroundColor": "#f5f5f5",
        "flex": 1,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "backgroundColor": "#f5f5f5",
          "color": "#73818C",
          "fontSize": 14,
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    Header
  </Text>
</View>
`;

exports[`render without key 1`] = `
<View
  accessibilityTraits="header"
  style={
    Array [
      Object {
        "backgroundColor": "#f5f5f5",
        "flex": 1,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
      Object {
        "borderTopColor": "#C7CDD1",
        "borderTopWidth": 0.5,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "backgroundColor": "#f5f5f5",
          "color": "#73818C",
          "fontSize": 14,
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    Header
  </Text>
</View>
`;
